# Operating-Systems

Lab1/cpp/: Creator.cpp  Employee.h  Main.cpp  Reporter.cpp
Lab2/: CMakeLists.txt  Lab2.h  test.cpp
Lab3/: CMakeLists.txt  Lab3.cpp  Lab3.h  test_lab3.cpp
Lab4/: CMakeLists.txt  Lab4.cpp  Lab4.h  Lab4Queue.cpp  receiver.cpp  sender.cpp
Lab4/test/: test_lab4.cpp
Lab4/tests/: Lab4Test.cpp
